syntax = "proto3";
package ru.gafarov.bet.grpcInterface;
import "user.proto";
import "rs.proto";

message MessageWithKey {
  User user = 1;
  int32 tgMessageId = 2;
  string secretKey = 3;
}
message ResponseSecretKey {
  Status status = 1;
  MessageWithKey messageWithKey = 3;
}
service SecretKeyService {
  rpc saveMessageWithKey(MessageWithKey) returns (Response);
  rpc reSaveMessageWithKey(MessageWithKey) returns (Response);
  rpc getSecretMessage(MessageWithKey) returns (ResponseSecretKey);
  rpc sendAutoGenerateKeyToUser(MessageWithKey) returns (ResponseSecretKey);
  rpc hasSecretMessage(User) returns (ResponseSecretKey);
}