syntax = "proto3";
package ru.gafarov.bet.grpcInterface;

import "google/protobuf/timestamp.proto";
import "rs.proto";

message User {
  int64 id = 1;
  string username = 2;
  int32 code = 3;
  int64 chatId = 4;
  ChatStatus chatStatus = 5;
}

enum ChatStatus {
  START = 0;
  WAIT_OPPONENT_NAME = 1;
  WAIT_OPPONENT_CODE = 5;
  WAIT_DEFINITION = 2;
  WAIT_WAGER = 3;
  WAIT_FINISH_DATE = 4;
  WAIT_APPROVE = 6;
}

message ResponseUser {
  Status status = 1;
  User user = 2;
  repeated User users = 3;
}

service UserService {
  rpc addUser(User) returns (ResponseUser);
  rpc getUser(User) returns (ResponseUser);
}